--- a/welcome.html
+++ b/welcome.html
@@ -6,51 +6,88 @@
     <link rel="stylesheet" href="{{url_for('static', filename = 'css/website.css')}}">
 </head>
 
-<body>
-    <p>OtakuZone Isekai Shonen Seinen Login</p>
-    <h2>Welcome, {{ username }}!</h2>
-
-   
-
-    <h2>Anime Review website</h2>
-    <p>Shar your opinions on anime or this website. Find anime recommendations</p>
-    <a href="Chat.html">
-        <break><button>Chat Now</button></break>
-    </a>
-    <h1>Different Types Of Anime</h1>
-    <div id='container'>
-        <img src="{{url_for('static', filename = 'Eminence.jpg')}}" id="cid">
-        <img src="{{url_for('static', filename = 'Tanjiro.jpg')}}" id="cid">
-        <img src="{{url_for('static', filename = 'opm.jpg')}}" id="cid">
+<body id="bodyq">
+    <div id="menu">
+        <nav>
+            <ul>
+                <p><strong id="custom"><span id="applepie"><a href="{{url_for('welcome')}}" id="nohyper">OtakuZone</a></span></strong>
+                <div id="formatside">
+                <div><span><a href="{{url_for('isekai')}}" id="nohyper1">Isekai</a></span></div>
+                <div><span><a href="{{url_for('shonen')}}" id="nohyper2"> Shonen</a></span></div>
+                <div><span><a href="{{url_for('seinen')}}" id="nohyper3"> Seinen</a></span> </div>
+                <div><span><a href="{{url_for('profile')}}" id="nohyper4">  {{  username }}!!! </a></span></div>
+                </div></p>
+            </ul>
+        </nav>  
     </div>
+    <div id="content">
+        <h2 id="colour1">Welcome, {{ username }}!</h2>
 
-    <p><strong>Isekai Shonen Seinen</strong></p>
-    <p> Teleport into a new world, where you are reborn. Start a new life! Enjoy the excitements of action scened anime.
-        Enjoy a young adult focused anime. </p>
 
-    <h1>Top Three Animes:</h1>
-    <p>1. placeholder <break>
-            description</break>
-    </p>
-    <p>2. placeholder <break>
-            description</break>
-    </p>
-    <p>3. placeholder <break>
-            description</break>
-    </p>
-    <button>Daily</button><button>Monthly</button><button>Yearly</button>
-    <h1>Reviews</h1>
-    <p> Title placeholder
-        <break>description</break>
-    </p>
-    <p> Title placeholder
-        <break>description</break>
-    </p>
-    <p> Title placeholder
-        <break>description</break>
-    </p>
 
-    <p><a href="{{ url_for('logout') }}">Logout</a></p>
+        <h3 id="title2">Anime Review website</h3>
+        <p>Share your opinions on anime or this website. Find anime recommendations</p>
+
+    <div id="randomanime">
+        <h2>The Anime of the day is:</h2>
+        <a href="{{url_for('randomanime')}}">
+            <break><button class="dire" id="dire">Anime of The Day</button></break>
+        </a>
+    </div>    
+        <h1>Different Types Of Anime</h1>
+        <div class='container'>
+            <div>
+                <a href="{{url_for('isekai')}}"><img src="{{url_for('static', filename = 'Eminence.jpg')}}" class="cid"></a>
+                <p><strong class="x">Isekai</strong></p>
+                <p class="x">Teleport into a new world, where you are reborn.</p>
+
+
+            </div>
+            <div>
+                <img src="{{url_for('static', filename = 'Tanjiro.jpg')}}" class="cid">
+                <p><strong class="x">Shonen</strong></p>
+                <p class="x">Enjoy the excitements of action scened anime.</p>
+
+            </div>
+            <div>
+                <img src="{{url_for('static', filename = 'opm.jpg')}}" class="cid">
+                <p><strong class="x">Seinen</strong></p>
+                <p class="x">Enjoy a young adult focused anime.</p>
+
+
+            </div>
+        </div>
+
+
+        <h1>Top Three Animes:</h1>
+        <p>1. One Piece <break>
+        <br>
+        Embark on a journey with Luffy and his crew to find the One Piece</break>
+        </p>
+        <p>2. Oshi No Ko<break>
+        <br>
+        What will happen to Aqua as he begins his venture for revenge for the death of his Mother?</break>
+        </p>
+        <p>3. Fragrant Flower Blooms With Dignity<break>
+        <br>
+        Enjoy a break from action and watch the sweetest romance show between Waguri and Rintaro</break>
+        </p>
+        <button class="dire" id="dire">Daily</button><button class="dire" id="dire">Monthly</button><button class="dire" id="dire">Yearly</button>
+        <h1>Reviews</h1>
+        <p> Bob
+        <br>
+        <break>I enjoyed this website</break>
+        </p>
+        <p> Jaar
+        <br>    
+        <break>bad website boooooo</break>
+        </p>
+        <p> jaypoo jed
+        <br>    <break>I think that this website was easy to navagate</break>
+        </p>
+
+        <p><a href="{{ url_for('logout') }}">Logout</a></p>
+    </div>
 </body>
 
 </html>
